# kbcb

./: .gitignore  CMakeLists.txt  README.md  build-debian.sh  build-mac.sh  build-redhat.sh  build.sh  formula-template.rb  start.sh
debian/: README.Debian  changelog  control  copyright  install  rules
docs/: binary.md  window.md  windows.md
include/: git.h  kambria.h  util.h
lib/: git.cpp  kambria.cpp  libgit2.so.27  util.cpp
lib/pkgconfig/: libgit2.pc
redhat/: LICENSE  kbcb.spec
redhat/docs/: macos.md
scripts/: build-debian.sh  build-mac.sh  build-redhat.sh
src/: git.c  git.cpp  git.h  kambria.c  kambriarc.c  kambriarc.h  kbcb.c  kbcb.cpp  util.c
src/hooks/: kambria-pre-push  pre-push
